ADD: model modification

--- a/moo.tex
+++ b/moo.tex
@@ -46,4 +46,100 @@
 pymoo 框架中的算法 (如NSGA-III算法) 是模块化组织的，用户可以通过编写代码自定义采样、交叉和突变等模块，自行组装符合自身需求的算法。%
 
 \subsection{参数优化步骤}
-根据第 4 章模型敏感性参数分析结果，选择 10 个对模拟结果影响较大的参数。然 后再次使用 Monte Carlo 方法选择 Cotton2K 模型参数集，但仅在模型敏感性参数分析出 的影响较大的参数中进行，第二次选择的参数集没有进行敏感性分析。相反，第二次 Monte Carlo 方法采样后的模拟结果被用于模型参数优化，以识别在测量结果和模拟结 果之间提供最佳一致性的参数集。 具体步骤如下： （1）选择第 4 章对模型结果影响较大的 10 个品种，确定各参数的取值范围和均匀 分布形式。 （2）利用 Monte Carlo 方法对参数随机采样，取采样次数 5000 次（EFAST 方法认 为采样次数大于参数个数×65 的分析结果有效）。 (3）采用 Python 语言编写 Cotton2K 模型能够识别的输入文件并对上一步参数进行 批量处理，求得模型运算结果。 （4）从每次运行的模拟结果中提取模型输出结果，并将提取的模型输出结果整理 成文本格式。 （5）修改 pymoo 框架提供的多目标优化（NSGA-II算法）算法，包括采样、交叉 和突变等。 （6）运行程序获取最优解集，确定模型敏感性品种参数最优值。
+根据第 \ref{chap:sa} 章模型敏感性参数分析结果，选择 35 个对模拟结果影响较大的参数。
+然后再次使用 Sobol' 方法选择 Cotton2K 模型参数集，但仅在模型敏感性参数分析出的影响较大的参数中进行，第二次选择的参数集没有进行敏感性分析。%
+相反，第二次 Monte Carlo 方法采样后的模拟结果被用于模型参数优化，以识别在测量结果和模拟结 果之间提供最佳一致性的参数集。%
+具体步骤如下：
+\begin{enumerate}
+    \item 选择第 \ref{chap:sa} 章对模型结果影响较大的 35 个品种，确定各参数的取值范围和均匀分布形式。
+    \item 采用 Python 语言编写程序，生成 Cotton2K 的输入参数，以及模型输出的损失函数。
+    \item 运行 NSGA-III 算法调用 Cotton2K 模型，并将结果导入到数据库。
+    \item 采用剪枝算法对 Pareto 解集的结果进行剪枝。
+    \item 根据剪枝后的 Pareto 解集确定最终模型敏感性参数最优值。
+\end{enumerate}
+\begin{longtable}{llrrcrr}
+    \caption{Cotton2K 参数列表及率定值}\label{tab:parameters}                         \\
+    \toprule
+    参数     & 功能描述                   & 下限   & 上限   & GSA & 原版    & 改版    \\
+    \midrule\endfirsthead
+    \caption*{续表\ref{tab:parameters}}                                               \\
+    \toprule
+    参数     & 功能描述                   & 下限   & 上限   & GSA & 原版    & 改版    \\
+    \midrule
+    \endhead
+    \bottomrule
+    \multicolumn{7}{r}{\textit{接下页}}                                               \\
+    \endfoot
+    \bottomrule
+    \endlastfoot
+    VARPAR01 & 种植密度对生长的影响       & 0.00   & 0.08   & *   & 0.04344 & 0.03416 \\
+    VARPAR02 & 现蕾前的叶生长             & 0.00   & 0.60   &     & 0.3     & 0.3     \\
+    VARPAR03 & 现蕾前的叶生长             & 0.00   & 0.10   &     & 0.014   & 0.014   \\
+    VARPAR04 & 现蕾前的叶生长             & 0.00   & 1.00   & *   & 0.138   & 0.646   \\
+    VARPAR05 & 主茎叶生长                 & 0.50   & 3.00   &     & 1.6     & 1.6     \\
+    VARPAR06 & 主茎叶生长                 & 0.00   & 0.02   &     & 0.010   & 0.010   \\
+    VARPAR07 & 主茎叶生长                 & 18.0   & 28.0   &     & 24.0    & 24.0    \\
+    VARPAR08 & 果汁页生长                 & 0.00   & 0.20   &     & 0.10    & 0.10    \\
+    VARPAR09 & 铃生长周期                 & 18.9   & 38.0   &     & 28.0    & 28.0    \\
+    VARPAR10 & 铃生长速率                 & 0.10   & 0.45   &     & 0.3293  & 0.3293  \\
+    VARPAR11 & 最大铃干物质               & 3.00   & 15.0   &     & 8.8     & 8.8     \\
+    VARPAR12 & 方铃展前茎生长             & 0.00   & 2.00   & *   & 0.284   & 0.590   \\
+    VARPAR13 & 方铃展前茎生长             & 0.00   & 2.00   &     & 0.040   & 0.040   \\
+    VARPAR14 & 方铃展前茎生长             & 0.00   & 0.08   &     & 0.014   & 0.014   \\
+    VARPAR15 & 方铃展后茎生长             & 1.00   & 4.00   & *   & 3.971   & 2.001   \\
+    VARPAR16 & 方铃展后茎生长             & 0.50   & 2.00   &     & 2.4     & 2.4     \\
+    VARPAR17 & 方铃展后茎生长             & 0.00   & 1.00   &     & 0.10    & 0.10    \\
+    VARPAR18 & 方铃展后茎生长             & 0.00   & 0.20   &     & 0.140   & 0.140   \\
+    VARPAR19 & 株高生长                   & 0.00   & 0.50   &     & 0.20    & 0.20    \\
+    VARPAR20 & 株高生长                   & 0.00   & 0.10   &     & 0.02    & 0.02    \\
+    VARPAR21 & 株高生长                   & 10.0   & 18.0   & *   & 14.541  & 13.868  \\
+    VARPAR22 & 株高生长                   & -4.00  & -2.00  & *   & -2.686  & -2.077  \\
+    VARPAR23 & 株高生长                   & 0.09   & 0.12   &     & 0.10    & 0.10    \\
+    VARPAR24 & 株高生长                   & 0.00   & 0.50   &     & 0.175   & 0.175   \\
+    VARPAR25 & 株高生长                   & 1.00   & 4.00   &     & 2.20    & 2.20    \\
+    VARPAR26 & 株高生长                   & 0.70   & 1.30   & *   & 1.2500  & 0.7500  \\
+    VARPAR27 & 碳胁迫下的主茎节点延迟     & 0.50   & 1.00   & *   & 0.731   & 0.743   \\
+    VARPAR28 & 碳胁迫下的坐果节点延迟     & 1.00   & 3.00   &     & 2.15    & 2.15    \\
+    VARPAR29 & 碳胁迫下的坐果节点延迟     & 1.00   & 3.00   &     & 1.36    & 1.36    \\
+    VARPAR30 & 温度对方铃形成的影响       & 0.70   & 1.30   & *   & 1.281   & 1.249   \\
+    VARPAR31 & 现蕾前节点的发育           & 1.00   & 5.00   & *   & 3.210   & 2.175   \\
+    VARPAR32 & 现蕾前节点的发育           & 1.00   & 3.00   & *   & 1.625   & 1.664   \\
+    VARPAR33 & 现蕾前节点的发育           & 0.50   & 1.00   &     & 0.80    & 0.80    \\
+    VARPAR34 & 初始叶面积                 & 0.01   & 0.10   & *   & 0.0407  & 0.0822  \\
+    VARPAR35 & 果枝发育                   & -32.0  & -26.0  & *   & -26.118 & -27.108 \\
+    VARPAR36 & 坐果节点的发育             & -57.0  & -49.0  &     & -54.00  & -54.00  \\
+    VARPAR37 & 坐果节点的发育             & 0.00   & 2.00   &     & 0.80    & 0.80    \\
+    VARPAR38 & 落叶剂对不同叶龄叶片的影响 & 0.00   & 5.00   &     & 3.20    & 3.20    \\
+    VARPAR39 & 温度对吐絮的影响           & -306.0 & -240.0 &     & -292.0  & -292.0  \\
+    VARPAR40 & 温度对吐絮的影响           & 0.70   & 1.30   &     & 1.08    & 1.08    \\
+    VARPAR41 & 温度对衣份率的影响         & 45.0   & 60.0   & *   & 51.813  & 47.436  \\
+    VARPAR42 & 温度对衣份率的影响         & 0.30   & 0.90   & *   & 0.844   & 0.341   \\
+    VARPAR43 & 碳胁迫下的脱落强度         & 0.30   & 0.70   & *   & 0.514   & 0.601   \\
+    VARPAR44 & 水分胁迫下的脱落强度       & 0.30   & 0.70   &     & 0.48    & 0.48    \\
+    VARPAR45 & 方铃脱落的概率             & 0.10   & 0.50   &     & 0.24    & 0.24    \\
+    VARPAR46 & 方铃脱落的概率             & 0.00   & 0.15   &     & 0.08    & 0.08    \\
+    VARPAR47 & 铃脱落的概率               & 1.00   & 10.0   & *   & 3.833   & 6.439   \\
+    VARPAR48 & 铃脱落的概率               & 0.30   & 1.50   & *   & 0.532   & 0.554   \\
+    VARPAR49 & 铃脱落的概率               & 5.00   & 15.0   & *   & 7.714   & 6.867   \\
+    VARPAR50 & 铃脱落的概率               & 0.20   & 1.80   & *   & 1.610   & 1.216   \\
+    LIPAR01  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -3.347  \\
+    LIPAR02  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -2.199  \\
+    LIPAR03  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -2.788  \\
+    LIPAR04  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -1.262  \\
+    LIPAR05  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -0.253  \\
+    LIPAR06  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -1.602  \\
+    LIPAR07  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -1.251  \\
+    LIPAR08  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -3.464  \\
+    LIPAR09  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -0.207  \\
+    LIPAR10  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -0.776  \\
+    LIPAR11  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -0.758  \\
+    LIPAR12  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -1.110  \\
+    LIPAR13  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -2.517  \\
+    LIPAR14  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -1.871  \\
+    LIPAR15  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -2.984  \\
+    LIPAR16  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -0.166  \\
+    LIPAR17  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -3.303  \\
+    LIPAR18  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -1.743  \\
+    LIPAR19  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -1.504  \\
+    LIPAR20  & 光能截获参数               & -1.60  & 0.00   & *   & -       & -2.155  \\
+\end{longtable}
