--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,4 +1,9 @@
 \chapter{结论与展望}
+本文对机理性很强的棉花生产模拟模型 Cotton2K 进行了详细阐述，并以新疆阿拉尔市 201 9年至 2020 年的“中棉 619”的田间试验为基础，通过 Sobol' 方法对 Cotton2K 模型的品种参数进行全局敏感性分析，%
+并对敏感性指数较大的品种参数采用多目标优化算法进行优化，%
+对模拟结果与实测数据进行分析，进而评估了研究区域棉花的模拟精度。
+
+\section{主要结论}
 
 本文 Cotton2K 源码被修改加入更细节的分层冠层子模块。%
 事实证明，这样的修改有助于提高模型的模拟精度。
@@ -7,10 +12,10 @@
 模拟结果显示，地上总生物量和籽棉产量随着灌溉量的增加而增加，这与实际测量结果相当。%
 这些模拟结果可作为南疆无膜栽培棉花的种植的参考数据。
 
+\section{存在的问题与展望}
+
 本文仍存在一些不足：
-\begin{enumerate}
+\begin{enumerate*}
     \item 在参数率定时考虑的生理指标过少
     \item 未检验模型对除阿拉尔地区以外的其他地区的有效性
-\end{enumerate}
-
-下一步需要继续开展田间试验，增加更多的新疆其他地区田间数据，并考虑多个生育指标对模型参数进行优化，从而进一步提高模型的模拟精度。
+\end{enumerate*}。下一步需要继续开展田间试验，增加新疆其他地区田间数据，并考虑多个生育指标对模型参数进行优化，从而进一步提高模型的模拟精度。
