UPDATE: pre-defens

--- a/method.tex
+++ b/method.tex
@@ -1,20 +1,17 @@
 \chapter{材料与方法}
 
-\section{实验观测}
+\section{试验观测}
 试验区位于南疆地区阿拉尔市塔里木大学灌溉试验站 (\ang{81;11;46}E, \ang{40;37;28}N)。
 \begin{figure}
     \centering
     \includegraphics[scale=0.4]{research_site.png}
     \caption{试验站所在位置}
 \end{figure}
-灌溉实验按照田间实验设计，采用滴灌方式，根据 SWAP 模型\cite{swap2021}的精准灌溉工具，通过气象数据，土壤数据和棉花生长数据计算每日的实际蒸发蒸腾量 ($ET_c$)，按照水分需求进行灌溉。
-设计三个灌溉水平，标准亏损灌溉 75\% $ET_c$，90\% $ET_c$ 和 100\% $ET_c$。
-另外，设计一个经验灌溉水平，灌溉定额 $\mathrm{280 m^3 / 667m^2}$，生育期滴水总计 14 次。
-项目中不研究其他营养对棉花生长的影响，所以 N、P、K 肥按照经验值随滴灌施入，测土施肥，各小区施肥量统一，$N$-$P_2O_5$-$K_2O$ 按照 250-100-50 $\mathrm{kg/hm^2}$ 的量进行施肥。
-播种日期设计 2 个水平，分别为铺设地膜的棉花播种后第 10 和 15 天，根据出苗率补充到设计的种植密度，并记录补苗日期。
-第一年设计三个种植密度，理论密度分别为 15000, 16000 和 17000 株/$\mathrm{hm^2}$。
-第二年到第三年根据第一年的模拟结果进行适当调整。
-共 24 个处理，进行安全区组设计，每个小区 0.25 亩，每个实验三次重复。
+灌溉实验按照田间实验设计，采用滴灌方式，通过气象数据，按照水分需求进行灌溉，以南疆地区覆膜栽培棉花经验灌水量 4200 m$^3$/hm$^2$ (420 mm) 为基准，%
+设置 6 个不同水平的灌水处理，分别为 80\% 灌水量 (W1)、90\% 灌水量 (W2)、100\% 灌水量 (W3)、110\% 灌水量 (W4)、120\% 灌水量 (W5)、130\% 灌水量 (W6)。
+各处理采用完全随机区组设计，每小区面积 72 m$^2$，等行距种植，行距为 72 cm，南北走向，每个处理共有 3 个重复。
+因本文不研究其他营养对棉花生长的影响，所以 N、P、K 肥按照经验值随滴灌施入，各小区施肥量统一，%
+$N$-$P_2O_5$-$K_2O$ 按照 250-100-50 $\mathrm{kg/hm^2}$ 的量进行施肥。
 
 \subsection{气象数据}
 
@@ -142,45 +139,15 @@ $\Delta W$ 为土壤贮水量的减少量(mm)：
     W = 10 \cdot \theta \cdot \gamma \cdot h
 \end{equation}
 
-式中：$W$ 为土壤贮水量(mm)，$\theta$ 为计划湿润层内土壤质量含水率 (\%)，$\gamma$ 为土壤体积质量 ($\mathrm{g cm^{-3}}$)，$h$ 为计划湿润层深度 (cm)。
+式中：$W$ 为土壤贮水量(mm)，$\theta$ 为计划湿润层内土壤质量含水率 (\%)，$\gamma$ 为土壤体积质量 ($\mathrm{g/cm^3}$)，$h$ 为计划湿润层深度 (cm)。
 
 \section{模型模拟}
 \subsection{模型改进}
 
-分析叶面积指数、叶倾角和方位角的空间分布规律及光能截获分布，冠层深度拟分为 20 层，每层占棉花总高度的 5\%，水平方向根据棉花冠幅考虑 8 个网格，共 160 个冠层空间。
-首先，计算每一层的有效叶面积指数，
-其次，定量化每一层与最顶部冠层的光合叶面积指数的比例（$PAI_{\%,i}$），重新积分计算有效总光合叶面积指数，
-最后，重新驱动 Cotton2K 模型，模拟干物质积累，每一层的 $PAI_{\%,i}$ 通过公式 \ref{eq:pai} 计算
-\begin{equation}
-    \label{eq:pai}
-    PAI_{\%,i} = 1 - (1 - x_i^\alpha)^\beta
-\end{equation}
-$PAI_{\%,i}$ 是第 $i$ 层截获 $PAI$ 与最顶部冠层 $PAI$ 的比值，$x_i$ 是冠层深度的百分比，
-研究中分 20 层，所以最顶层等于 0.05，最底层等于 1。$\alpha$ 和 $\beta$ 根据不同生长发育时期实际观测的每层 $PAI$ 和冠层顶部的 $PAI$ 确定，分段拟合。
-
-首先，IRE 方法改进水分运移方程的上下边界条件，与根系吸水模型耦合，研究土体 100cm，厚度分层 5cm，水平方向间距 5cm。
-其次，根据根长密度分布函数计算每个土层空间的根长密度，并使用 SWAP 模型推荐的方法计算潜在蒸发蒸腾量，分配到每一个土层空间。最后，以每小时时间步长应用 IRE 方法离散土壤蒸发、根系吸水和水盐运移过程。
-具体步骤如下：
-
-
-潜在作物蒸腾与土壤蒸发的计算如公式\ref{eq:E_p}和公式\ref{eq:T_p}
-\begin{equation}
-    \label{eq:T_p}
-    T_p = \frac{
-        (1 - W_{frac}) \{ V_c \frac{\Delta_v}{\lambda_w} (R_n - G) + \frac{p_1 \rho_a C_a}{\lambda_w} (\frac{e_{sat} - e_a}{r_{a,can}}) \}
-    }{
-        \Delta_v + \gamma_a(1 + \frac{ r_{s,\min} }{ r_{a,can} LAI_{eff} })
-    }
-\end{equation}
-\begin{equation}
-    \label{eq:E_p}
-    E_p = \frac{
-        (1 - V_c) \frac{\Delta_v}{\lambda_w} (R_n - G)
-        + \frac{p_1 \rho_a C_a}{\lambda_w} (\frac{e_{sat} - e_a}{r_{a,can}})
-    }{
-        \Delta_v + \gamma_a (1 + \frac{r_{soil}}{r_{a,soil}})
-    }
-\end{equation}
+分析叶面积指数、叶倾角和方位角的空间分布规律及光能截获分布，冠层深度拟分为 20 层，每层占棉花总高度的 5\%。
+首先，计算每一层的有效叶面积指数，%
+其次，定量计算每一层的光合作用碳同化产量，%
+最后，重新驱动 Cotton2K 模型，模拟干物质积累。详细的流程参见第 \ref{sec:canopyLayering}节。
 
 \subsection{模型参数化}
 本文采用 2019-2020 连续 2 年的棉花实验数据对 Cotton2K 模型进行参数化。
