--- a/abstract.tex
+++ b/abstract.tex
@@ -1,18 +1,47 @@
 \chapter*{摘要}
-无膜栽培技术是解决南疆地区棉田残膜污染的有效手段。
-项目拟通过模型模拟定量评价种植密度和灌溉制度对无膜棉生长和产量的影响，
-以 Cotton2K 模型为基础，重点解决棉花生长模拟过程中的两个关键科学问题：
-\begin{enumerate*}
-    \item 棉花不同发育阶段有效光合叶面积指数在冠层的空间分布不一致。
-    \item 光能截获、盐分和根系分布对水分运移的耦合影响和定量描述。
-\end{enumerate*}
-首先，综合考虑热效应和光周期效应模拟物候学发育时间；
-其次，建立有效面积指数在冠层空间分布比例与生理发育时间的分段函数方程，改进光能截获模拟精度，构建基于过程的棉花光合生产与干物质积累模型；
-再次， IRE 方法改进水分运移方程上下边界条件，采用根系吸水与根长密度分布统一求解的方法，分层计算盐分和根系分布对水分运移的影响，建立考虑冠层光能截获、根系和盐分空间分布的水分运移模型；
-最后，量化棉花各器官干物质分配、蕾铃发育与脱落过程，构建棉花干物质分配与产量形成的模拟模型。
+南疆地区棉田中的残留塑料薄膜污染已经成为棘手的问题。%
+而无膜栽培技术是解决这个问题的有效手段。%
+中国工程院院士喻树迅团队在 2017 年于阿克苏地区沙雅县成功培育出亩产 320{-}350 公斤的 “中棉 619” 早熟品种，对减少新疆棉田残膜对生态环境和原棉的污染意义重大。%
+本研究采用棉花生长模拟系统，定量评价了灌溉管理对非绒毛棉生长发育和产量的影响。%
+有效光合叶面积指数发芽后集中在冠层的底部，成熟期集中在顶部，而花期属于均匀分布，%
+本文将借鉴成熟的棉花生长模型理论，集中解决有效光合叶面积指数不同发育阶段在棉花冠层分布不一致的问题，提高光能截获和光合作用模拟精度。
+将参考Cotton2K模型作为基本理论模型，对其冠层子模型中进行修改，并利用在2019年和2020年的两个棉花生长季节的田间实验数据进行标定。
+首先，为了提高光能拦截的模拟精度，构建了冠层有效叶面积指数和生理发育时间的分层模型。
+其次，基于过程的棉花光合作用产量和干物质积累模型的建立。
+最后，将计算干物质分布、枝条数、方格数、棉铃数、开铃数、结实部位和流产果实数，从而建立一个棉花生长模型。
+
+在修改后的模型中，叶重、LAI和叶柄重量在生长季节的后期有所下降。
+作为对比，原始模型没有这种下降。
+在 Cotton2K 中，嫩叶从茎部生长，这意味着当叶子出现时，茎部重量将减去叶子的重量。
+在原始模型的模拟中，茎的重量为负值，因为叶片的生长速度被明显高估了。
+而且没有对正数重量进行验证。
+当测量的 LAI $\ge 1.5$ 时，模拟的LAI大多被高估，而当 LAI 小于 1.5 时，则被低估。
+当使用原版模型时，当 LAI 小于 1.5 时，模拟的LAI大多被高估，这样的行为与 \authoryearcite{thorp2019} 报告相似。
+改版之后的模型模拟中，LAI 的 NRMSE从65.88\% 下降到31.99\%，在大多数情况下略微低估了。
+大多数情况下，当 LAI 大于 3 时，分散性显示出增加的迹象。
+因此，该模型在充分灌溉条件下对植物生长条件的响应能力较弱，正如它所声称的那样
+该模型侧重于干旱地区和亏损灌溉策略。
+尽管修改后的模型模拟的结果较差，但模拟的SCY的准确度是中等的。
+总的来说，用Cotton2K模型模拟的LAI和SCY比用附近的差分模型处理的要差。
+原有模型模拟的光能截获率的值系统地偏高，在测量值只有 0.6 左右的情况下因为超过 1 而被截断。
+修改后的模型模拟中的光能截获率表现更好，NRMSE从 29.78\% 下降到21.90\%。
+这充分表明对冠层分层模拟的有效性。
+修改后的模型所模拟的 SCY 在所有的模拟情况下都被低估了，
+这使得 NRMSE 大于原始模型的模拟结果。
+这可能是由于模拟中晚期灌溉减少而导致的过度的棉铃脱落。
+Cotton2K模拟的LI、LAI、TAGB和SCY的NRMSE在测量和模拟数据之间的范围为
+21.90\% 至 29.78\%，28.92\% 至 29.90\%，44.84\% 至 62.28\%，15.90\%至16.26\%。
+基于来自南疆不同地点的数据，这些指标的结果低于不同的棉花模拟模型。
+一个可能的原因是栽培品种 “中棉 619” 的早熟特性，而Cotton2K中硬编码的经验回归公式是基于在其他地点和使用其他变种的实验。
+
+\textbf{关键词:} 棉花冠层; 无膜棉; 光能截获率; 全局敏感性分析; 多目标优化
 
 \chapter*{Abstract}
 Non-mulch planting technology is an effective mean to solve the residual plastic mulch pollution in cotton (\textit{Gossypium hirsutum} L.) fields in southern Xinjiang.
+The team of Yu Shuxun, an academician of the Chinese Academy of Engineering, successfully cultivated the early-maturing variety of ``Zhongmian 619'' with a yield of 320{-}350 kg per mu in Shaya County, Aksu Region in 2017,
+which is of great significance to reduce the pollution of the ecological environment and raw cotton by residual film in cotton fields in Xinjiang. %
+The effective photosynthetic leaf area index is concentrated at the bottom of the canopy after germination and at the top at maturity, while the flowering stage belongs to uniform distribution, %
+In this paper, we will focus on solving the problem of inconsistent distribution of effective photosynthetic leaf area index in cotton canopy at different developmental stages by drawing on the mature cotton growth model theory to improve the accuracy of light energy interception and photosynthesis simulation.
 The impacts of irrigation management on the growth development and yield of non-mulch cotton were quantitatively evaluating by employing a cotton growth simulating system in this research.
 The spatio-temporal distribution of the effective photosynthetic leaf area index in the canopy at different developmental stages varies strongly.
 The Cotton2K model with modification in canopy submodel will be referenced as a basic theoretical model, and calibrated using field experiments data during the two cotton growing seasons of 2019 and 2020.
@@ -20,3 +49,32 @@ Firstly, in order to improve the simulation accuracy of light energy interceptio
 Secondly, the process-based cotton photosynthetic production and dry matter accumulation models will be created.
 Finally, the dry matter distribution, the number of branches, squares, bolls, open bolls, fruiting sites and aborted fruits will be calculated, thereby establishing a cotton growth model.
 The decline of normalized root mean squared error (NRMSE) for canopy related metrics shows that modifications significantly ($p < 0.05$) improved the accuracies of simulation.
+
+Leaf weight, LAI and petiole weight were falling at the later part of growing season with modification model.
+In contract, original model do not have this decline.
+Young leaves were growing from stem in Cotton2K, which means that when leaves emerge, stem weight will minus the weight of them.
+Stem weight goes negative in the simulation with original model because leaf growing rate was remarkably overestimated,
+and absence of validation for positive weights.
+Simulated LAI is mostly overestimated when measured LAI is greater than 1.5 $\mathrm{m^2 m^{-2}}$ and underestimated
+for LAI less than 1.5 $\mathrm{m^2 m^{-2}}$ when using original LI method, the behavior is similar to that
+\authoryearcite{thorp2019} reported.
+The NRMSE of LAI reduced from 65.88\% to 31.99\% after switch to modified LI method, and it slightly underestimated for
+most situation, and dispersion show signs of increasing while $\mathrm{LAI > 3\ m^2 m^{-2}}$.
+Therefore, the model has weak ability for responding to plant growth conditions under full irrigation, as it claimed
+that focused on arid region and deficit irrigation strategies.
+The accuracies of simulated SCY were moderate, despite the worse result simulated by modified model.
+In general, LAI and SCY simulated by Cotton2K model were worse than that processed with a difference model at nearby
+research stations.
+The LI values simulated in the original model are systematically high and have been truncated beyond 1 when the measured value is only around 0.6.
+LI in modified model simulations performed better, and the NRMSE declined from 29.78 \% to 21.90 \%.
+This shows the validity of the stratified simulation of the canopy.
+The SCY simulated by modified model is generally underestimate in all simulation scenarios, which makes the NRMSE is
+greater than simulation result from original model.
+It may be due to excessive boll shedding due to reduced irrigation in the late season in simulation.
+The NRMSE of Cotton2K simulated LI, LAI, TAGB, and SCY between measured and simulated data ranging from
+21.90 \% to 29.78 \%, 28.92 \% to 29.90 \%, 44.84 \% to 62.28 \% and 15.90 \% to 16.26 \% using two LI methods, respectively.
+Results for those metrics is lower for a different cotton simulation model based on data from different site in the South Xinjiang, China.
+One possible reason for this was the precocity of cultivar ``Zhongmian 619'' and the empirical regression formulas hard-coded in Cotton2K
+is based on experiments in other sites and using other variants.
+
+\textbf{Keywords}: Cotton2K Canopy; Non-mulch planting; Light interception; Global sensitivity analysis; Multiobjective optimization
