--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,13 +1,15 @@
 \chapter{结论与展望}
-本文对机理性很强的棉花生产模拟模型 Cotton2K 进行了详细阐述，并以新疆阿拉尔市 201 9年至 2020 年的“中棉 619”的田间试验为基础，通过 Sobol' 方法对 Cotton2K 模型的品种参数进行全局敏感性分析，%
-并对敏感性指数较大的品种参数采用多目标优化算法进行优化，%
-对模拟结果与实测数据进行分析，进而评估了研究区域棉花的模拟精度。
+本文对机理性很强的棉花生产模拟模型 Cotton2K 进行了详细阐述，%
+修改了 Cotton2K 模型的源码以修复一些问题并增加新的功能，%
+并以新疆阿拉尔市 2019年至 2020 年的“中棉 619”的田间试验为基础，通过 Sobol' 方法对 Cotton2K 模型的品种参数进行全局敏感性分析，%
+并对敏感性指数较大的品种参数采用 NSGA-III 多目标优化算法进行优化，%
+对模拟结果与实测数据进行分析，进而评估了模型的修改对研究区域棉花的模拟精度的影响。
 
 \section{主要结论}
 
 本文 Cotton2K 源码被修改加入更细节的分层冠层子模块。%
 事实证明，这样的修改有助于提高模型的模拟精度。
-与其他模型，如CSM-Cropgro-Cotton和OZCOT相比，Cotton2K模型的模拟精度仍有很大的提升空间。%
+与其他模型，如 CSM-Cropgro-Cotton 和 OZCOT 相比，Cotton2K模型的模拟精度仍有很大的提升空间。%
 这可能是由于多种原因引起的。%
 模拟结果显示，地上总生物量和籽棉产量随着灌溉量的增加而增加，这与实际测量结果相当。%
 这些模拟结果可作为南疆无膜栽培棉花的种植的参考数据。
