FIX: some problems

--- a/method.tex
+++ b/method.tex
@@ -69,77 +69,21 @@ $N$-$P_2O_5$-$K_2O$ 按照 250-100-50 $\mathrm{kg/hm^2}$ 的量进行施肥。
 
 式中， $LI_{i}$ 为第 $i$ 层的光能截获率， $I_{i,j}$ 是第 $i$ 层第 $j$ 列网格的光照强度， $I_{i+1,j}$ 为上层网格的光照强度。
 
-\subsection{土壤含水量与温度}
+\subsection{土壤参数}
+每周取样测定一次土壤容积含水量（4 $\times$ 3 网格），另外，使用矫正后的土壤水分和温度自动记录仪 (HOBO H21-002, United States) 分 5 层实时监测 0-100cm 深度的土壤水分含量；
 
-土壤温度由 Thermochron® iButton®器件(DS1921G) 收集，设置取样间隔为 2 小时。
+土壤温度由 Thermochron® iButton®器件(DS1921G) 收集，设置取样间隔为 2 小时，将传感器埋于各处理区中心紧挨棉花种植行的位置，埋深为 5 cm、10 cm、20 cm、40 cm、50 cm。
 
+其他土壤参数如土壤田间持水率、容积密度、枯萎点含水率、饱和土壤含水率、土壤水响应曲线和渗透系数等可直接取样带回实验室进行测量，同步记录灌溉日期和灌溉量；
 \subsection{棉花生理指标}
 试验记录内容主要包括:
 \begin{enumerate}
     \item 生育期：详细记录棉花播种、出苗、现蕾、开花和吐絮期出现时间，均以全田 50\% 棉株达到发育要求为标准；
     \item 株式图：每 10 天记录一次株式图，内容有株高、叶片数、果枝数、果节数、蕾、花、小铃、大铃及吐絮铃个数与部位等；
-    \item 叶面积指数和光合有效辐射：每 10 天结合干物质测定，取全株叶片，用扫描法测定冠层垂直方向 20 个深度和水平 8 个网格的叶面积指数。使用 SunScan冠层分析仪（Delta 公司，英国）测定不同垂直和水平方向的光合有效辐射 PAR 和叶面积指数；
-    \item 光合作用：每 10 天测试一次，使用 LI6400XT 便携式光合作用测试仪分层测试净光合速率、气孔导度、胞间 CO2 浓度和蒸腾速率以及光响应曲线；
+    \item 叶面积指数：每 10 天结合干物质测定，取全株叶片，用扫描法测定冠层垂直方向 20 个深度和水平 8 个网格的叶面积指数；
     \item 干物质积累和分配：每 10 天取样一次，每次取样在苗期取 10 株样品，开花期后每次取 5 株，样品在 80℃下烘干至恒重后，分别测定根、茎、叶、蕾、花、小铃和大铃等各器官的干物质重量；
     \item 产量构成因素：测定棉花籽棉产量、衣分、铃重和纤维重量；
-    \item 根系：每隔 10 天取样，在 0-100cm 土壤深度和距棉行 0-40cm 内各 5cm间隔分别用根钻取带根土样，冲根器冲洗根后，用扫描仪扫描成 TIF 图像文件，再采用 DT-SCAN 图像分析软件，计算根系长度、密度、直径和表面积等指标；
-    \item 土壤水分：每周取样测定一次土壤容积含水量（20 $\times$ 8 网格），另外，使用矫正后的土壤水分和温度自动记录仪 (HOBO H21-002, United States) 分 10 层实时监测 0-100cm 深度的土壤水分含量；
-    \item 土壤盐分（电导率）：每周取样在实验室处理后采用 DDS-307 电导率仪测量，折算成土壤盐分含量；
-    \item 其他土壤参数：土壤田间持水率、容积密度、枯萎点含水率、饱和土壤含水率、土壤水响应曲线和渗透系数等可直接取样带回实验室进行测量，同步记录灌溉日期和灌溉量；
-    \item 土壤蒸发与棉花蒸腾：采用小型蒸渗仪测量蒸发，棉花蒸腾通过水量平衡原理计算；
-    \item 气象数据：由塔里木灌溉试验站气象数据提供，包括 15 分钟间隔的温度、湿度、辐射、风速、降雨和气压数据等。
 \end{enumerate}
-
-所获数据用 Python 进行统计分析，利用 Duncan 新复极差检验进行差异显著检验 $(p = 0.05)$。
-
-\subsection{棉花水分利用效率}
-水分利用效率 (Water use efficiency, WUE) 是节水农业重要指标，高水平的 WUE 是干旱区农业持续发展的关键所在。
-WUE 包括灌溉水利用效率，降水利用效率和作物水分利用效率。
-由于研究区降水稀少，本文仅分析灌溉水利用效率和作物水分利用效率。
-
-棉花水分利用效率 ($WUE_{ET}$) 和灌溉水分利用效率 ($IWUE$) 计算公式如下：
-
-\begin{equation}
-    WUE_{ET} = Y / ET_c
-\end{equation}
-
-\begin{equation}
-    IWUE = (Y - Y_n) / I
-\end{equation}
-
-式中 $Y$ 为皮棉产量 ($\mathrm{kg\ ha^{-1}}$)，
-$Y_n$ 为无灌水条件下棉花皮棉产量 ($\mathrm{kg\ ha^{-1}}$)，
-$ET_c$ 为生育期棉花蒸散量，
-$I$ 为灌水量 (mm)。
-\subsection{棉花蒸散量计算}
-
-各处理耗水量采用水量平衡公式计算：
-
-\begin{equation}
-    ET_c = R + I - F + Q - S + \Delta W
-\end{equation}
-
-式中 $ET_c$ 为作物蒸发蒸腾量 (mm)，
-$R$ 为降水量 (mm)，
-$I$ 为灌水量 (mm)，
-$F$ 为地表径流量 (mm)，考虑到地下埋管滴灌棉田实验期间无地表径流发生，此处取 $F = 0$
-$Q$ 为地下水补给量 (mm)，实验资料表明 110 \~ 130 cm 深处土壤水分变化不明显，因此做简化处理，取 $Q = 0$，
-$\Delta W$ 为土壤储水变化量 (mm)，
-$S$ 为深层渗漏量(mm)，实验田灌水量通过水量平衡方程计算确定，不存在深层渗漏，故 $S=0$；
-$\Delta W$ 为土壤贮水量的减少量(mm)：
-
-\begin{equation}
-    \Delta W = W_i - W_{i+1}
-\end{equation}
-
-式中：$W_i$ 和 $W_{i+1}$ 分别为第 $i$ 个时段初和时段末计划湿润层内的土壤贮水量 (mm)。
-为方便水量平衡计算，将含水率换算为以 mm 为单位的土壤贮水量 $W$ ：
-
-\begin{equation}
-    W = 10 \cdot \theta \cdot \gamma \cdot h
-\end{equation}
-
-式中：$W$ 为土壤贮水量(mm)，$\theta$ 为计划湿润层内土壤质量含水率 (\%)，$\gamma$ 为土壤体积质量 ($\mathrm{g/cm^3}$)，$h$ 为计划湿润层深度 (cm)。
 
 \section{模型模拟}
 \subsection{模型改进}
@@ -178,7 +122,7 @@ Sobol' 序列是一个应用广泛的准随机 (quasi-random) 低差值序列，
 本文采用 \authoryearcite{saltelli2002} 拓展的 Sobol' 序列生成模型输入。%
 生成的输入样本有 $N * (2D + 2)$ 条，其中 $N$ 为采样数， $D$ 是参数的数量。参见算法\ref{alg:sobol}。
 
-Sobol序列的一般特征有
+Sobol' 序列的一般特征有
 \begin{enumerate}
     \item Sobol' 序列是一种低差异的序列，也被称为 “准随机序列”。
     \item 比伪随机数的分布更均匀
