--- a/model.tex
+++ b/model.tex
@@ -10,7 +10,7 @@
 输出格式修改为 CSV 格式，改变模型代码以直接输出与土钻取土位置相对应的土壤含水量，全部字段见表 \ref{tab:output}。
 
 \begin{table}
-    \caption{修改后的 Cotton2K 模型输入}\label{tab:output}
+    \caption{修改后的 Cotton2K 模型输出}\label{tab:output}
     \centering
     \begin{tabular}{lll}
         \toprule
