REFACTOR: fix some labels, format problem

--- a/model.tex
+++ b/model.tex
@@ -5,7 +5,7 @@
 原版的 Cotton2K 模型输入输出是基于特定格式的文件的。考虑到模型的建立处于关系型数据库还未流行的年代，这种基于特定格式文件的输入输出方式是可以理解的。
 但这样的输入输出方式不利于 Cotton2K 结合到以 Python 为核心的现代化机器学习的生态中。
 所以本文对 Cotton2K 进行了重构，修改输出输出为结构化数据，方便与其他机器学习工具结合。
-具体的输入格式以 JSON Schema 的格式定义，参见附录\ref{appendix:inputSchema}，在此不再赘述。
+%具体的输入格式以 JSON Schema 的格式定义，参见附录\ref{appendix:inputSchema}，在此不再赘述。
 
 输出格式修改为 CSV 格式，改变模型代码以直接输出与土钻取土位置相对应的土壤含水量，全部字段见表 \ref{tab:output}。
 
