--- a/titlepage.tex
+++ b/titlepage.tex
@@ -14,17 +14,15 @@
         \makebox[222pt][s]{\heiti\zihao{1}硕士学位论文}
         \vspace*{36pt}
 
-        {\heiti\zihao{-2}南疆盐渍区无膜栽培棉花生长模拟}
-        %{\zihao{-2}\heiti{利用分子标记辅助选择改良珍汕 {\heiti{97}} 对稻瘟病的抗性}}
+        {\heiti\zihao{-2}\titleCN}
         \vspace*{3pt}
 
-        {\zihao{-3}Simulation of non-mulched cultivated cotton growth in saline areas of South Xinjiang}
-        %{\zihao{-3}\textbf{Improverment of Rice Blast Diease Resistance of \textit{zhenshan} 97 by Molecular Marker-assisted Selection}}
+        {\zihao{-3}\titleEN}
 
         \vspace*{46pt}
         \begin{spacing}{1.25}
         \zihao{4}
-        \huawenzhongsong{\makebox[7em][s]{研究生姓}名：\quad\underline{\hspace{2.5em}\makebox[4em][s]{唐梓涯}\hspace{9.5em}}\\
+        \huawenzhongsong{\makebox[7em][s]{研究生姓}名：\quad\underline{\hspace{2.5em}\makebox[4em][s]{\authorCN}\hspace{9.5em}}\\
         \makebox[6em][s]{指导教}\quad{}师：\quad\underline{\hspace{2.5em}\makebox[4em][s]{周保平}\hspace{3em}\makebox[2.5em][s]{教授}\hspace{4em}}\\
         \makebox[8em][s]{申请学位门类级别}：\quad\underline{\hspace{2.5em}工学硕士\hspace{9.5em}}\\
         \makebox[6em][s]{专业名}\quad{}称：\quad\underline{\hspace{2.5em}农业电气化与自动化\hspace{4.5em}}\\
